--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "astro preview",
     "astro": "astro",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "fetch": "node scripts/fetch-yahoo.mjs",
+    "refresh-db": "node scripts/build-sqlite-db.js"
   },
   "dependencies": {
     "@astrojs/node": "^9.5.2",
@@ -20,6 +22,7 @@
     "@testing-library/dom": "^10.4.1",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
+    "better-sqlite3": "^12.6.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
