--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "refresh-db": "node scripts/build-sqlite-db.js"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.6",
     "@astrojs/node": "^9.5.2",
     "astro": "^5.16.15",
     "chartgpu": "^0.1.6",
-    "sql.js": "^1.13.0"
+    "sql.js": "^1.13.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
