--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -35,6 +35,6 @@ jobs:
               run: |
                   git config --local user.name "github-actions[bot]"
                   git config --local user.email "github-actions[bot]@users.noreply.github.com"
-                  git add public/data/*
-                  git commit -m "chore: auto-update market data and db [skip ci]" || echo "No changes to commit"
+                  git add -f public/data/*.json
+                  git commit -m "chore: auto-update market data snapshots [skip ci]" || echo "No changes to commit"
                   git push
