--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,18 @@
     "short_name": "TW Stock",
     "description": "台灣股票分析平台 - 選股、分析、追蹤",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#0f0f1a",
     "theme_color": "#00d4aa",
     "orientation": "portrait-primary",
     "icons": [
+        {
+            "src": "/favicon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
+            "purpose": "any"
+        },
         {
             "src": "/icons/icon-72.png",
             "sizes": "72x72",
@@ -37,7 +44,13 @@
             "src": "/icons/icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
             "src": "/icons/icon-384.png",
@@ -48,20 +61,21 @@
             "src": "/icons/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ],
-    "categories": ["finance", "utilities"],
+    "categories": [
+        "finance",
+        "utilities"
+    ],
     "lang": "zh-TW",
     "dir": "ltr",
-    "screenshots": [
-        {
-            "src": "/screenshots/home.png",
-            "sizes": "1280x720",
-            "type": "image/png",
-            "label": "首頁"
-        }
-    ],
     "shortcuts": [
         {
             "name": "股票列表",
@@ -70,19 +84,19 @@
             "url": "/stocks",
             "icons": [
                 {
-                    "src": "/icons/stocks.png",
+                    "src": "/icons/icon-96.png",
                     "sizes": "96x96"
                 }
             ]
         },
         {
-            "name": "投資組合",
-            "short_name": "組合",
-            "description": "管理投資組合",
-            "url": "/portfolio",
+            "name": "智慧選股",
+            "short_name": "選股",
+            "description": "量子智慧選股終端",
+            "url": "/screener",
             "icons": [
                 {
-                    "src": "/icons/portfolio.png",
+                    "src": "/icons/icon-96.png",
                     "sizes": "96x96"
                 }
             ]
