--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "astro/tsconfigs/strict",
-    "include": [".astro/types.d.ts", "**/*"],
-    "exclude": ["dist"],
+    "include": [".astro/types.d.ts", "src/**/*", "tests/**/*"],
+    "exclude": ["dist", "node_modules", "public", "scripts"],
     "compilerOptions": {
         "types": ["vitest/globals"]
     }
