feat: add Transformer stock selection model training and inference scripts
- Implemented training script for Transformer model in `train.ts` with CLI arguments for date range and model ID.
- Developed Transformer model architecture in `transformer.ts` using TensorFlow.js, including custom layers for positional encoding and multi-head self-attention.
- Configured TypeScript settings in `tsconfig.json` for strict type checking and module resolution.
- Created Svelte component `AiScreenerResults.svelte` for displaying AI scoring results with filtering options.
- Added API route `ai-screener.ts` for computing and retrieving AI scores, with database persistence for results.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "fetch:all": "npm run fetch:list && npm run fetch:revenue && npm run fetch:stats && npm run fetch:financials && npm run fetch:chips",
         "build-db": "node scripts/build-sqlite-db.js && node scripts/import-forensic.mjs && node scripts/etl/generate-all-features.mjs && node scripts/etl/migrate-to-analysis-tables.mjs",
         "refresh-db": "npm run fetch:all && npm run build-db",
+        "ml:train": "npx tsx scripts/ml/train.ts",
+        "ml:predict": "npx tsx scripts/ml/predict.ts",
+        "ml:reflect": "npx tsx scripts/ml/reflect.ts",
         "format": "prettier --write .",
         "prettify": "npm run format"
     },
@@ -27,6 +30,7 @@
         "@astrojs/svelte": "^7.2.5",
         "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.2.0",
+        "@tensorflow/tfjs-node": "^4.22.0",
         "astro": "^5.16.15",
         "better-sqlite3": "^12.6.2",
         "chartgpu": "^0.1.6",
